# ctSpyderFields

./: README.md  paper.md  pyproject.toml  requirements.txt  setup.py
Data/: README.md  color_params.yaml  name_params.yaml  params.yaml
ctSpyderFields/: ctSpyderFields.py  params.yaml
docs/: data_preparation.md  install.md  usage.md
examples/: EyeDirectionFinderV0.3.py  Full analysis of a CT data.ipynb  ImportFromAmira.py  ImportFromDragonfly.py  ImportFromPickle.py  fullAnalysis.py  plotting.py
src/ctSpyderFields/: __init__.py  ctSpyderFields.py
test/: test_points.py
