[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ctSpyderFields"
version = "1.0"
dependencies = ["numpy==1.24.4",
    "opencv-python==4.8.1.78",
    "trimesh==4.0.0",
    "pandas==2.0.3",
    "tqdm==4.66.1",
    "matplotlib==3.7.3",
    "plotly==5.17.0",
    "scipy==1.10.1",
    "PyYAML==6.0.1",
    "scikit-learn==1.3.2",
    "alphashape==1.3.1"]
requires-python = ">=3.10"
authors = [
  {name = "Massimo De Agro'", email = "massimo.deagro@unitn.it"},
  {name = "Daniele Caradonna"},
  {name = "Atal Pande"},
  {name = "Egidio Falotico"},
  {name = "Lauren Sumner-Rooney"},

]
readme = "README.md"
